; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavfilter/extr_avf_showcqt.c_c_weighting.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavfilter/extr_avf_showcqt.c_c_weighting.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (double (i8*, double)* @c_weighting to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal double @c_weighting(i8* %0, double %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca double, align 8
  %5 = alloca double, align 8
  store i8* %0, i8** %3, align 8
  store double %1, double* %4, align 8
  %6 = load double, double* %4, align 8
  %7 = load double, double* %4, align 8
  %8 = fmul double %6, %7
  %9 = fmul double 1.488400e+08, %8
  store double %9, double* %5, align 8
  %10 = load double, double* %4, align 8
  %11 = load double, double* %4, align 8
  %12 = fmul double %10, %11
  %13 = fadd double %12, 0x407A85C28F5C28F7
  %14 = load double, double* %4, align 8
  %15 = load double, double* %4, align 8
  %16 = fmul double %14, %15
  %17 = fadd double %16, 1.488400e+08
  %18 = fmul double %13, %17
  %19 = load double, double* %5, align 8
  %20 = fdiv double %19, %18
  store double %20, double* %5, align 8
  %21 = load double, double* %5, align 8
  ret double %21
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
